add all functionality of Financial

--- a/src/components/detail.module.css
+++ b/src/components/detail.module.css
@@ -1,7 +1,7 @@
 .cover {
   display: flex;
   flex-direction: column;
-  width: 95vw;
+  width: 90vw;
   height: auto;
   margin: 0 auto;
   justify-content: flex-start;
@@ -17,7 +17,7 @@
   height: 6vh;
   border-radius: 5px;
   color: white;
-  font-size: 15px;
+  font-size: 10px;
 }
 
 span i {
@@ -25,12 +25,42 @@ span i {
 }
 
 .reportName {
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 18px;
+  font-weight: 600;
   color: white;
+  margin: 10px auto;
 }
 
 .noReports {
   font-size: 20px;
   color: white;
+}
+
+@media screen and (min-width: 768px) {
+  .reports {
+    width: 98vw;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 20px;
+  }
+
+  .cover {
+    width: 42vw;
+    padding: 5px;
+    border: 1px solid rgb(215, 213, 213);
+    border-radius: 5px;
+    margin: 10px auto;
+    float: left;
+  }
+
+  .cover p {
+    font-size: 15px;
+    width: 90%;
+    margin: 15px auto;
+  }
+
+  .reportName {
+    font-size: 20px;
+  }
 }
