--- a/src/components/companies.module.css
+++ b/src/components/companies.module.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 7vh;
   justify-content: space-between;
-  width: 95vw;
+  width: 98vw;
   align-items: center;
   align-self: center;
   margin: 0 auto;
@@ -10,7 +10,7 @@
 }
 
 .icons {
-  width: 15%;
+  width: 18%;
   display: flex;
   justify-content: space-between;
   color: #fff;
@@ -18,7 +18,7 @@
 }
 
 .heading {
-  font-size: 18px;
+  font-size: 12px;
   color: #fff;
 }
 
@@ -31,33 +31,44 @@
 }
 
 .showcase {
-  height: 35%;
+  height: 20vh;
   width: 98vw;
-  margin: 15px auto;
+  margin-top: 15px;
   display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
 }
 
-.showDiv {
-  width: 48%;
-  margin: 0 auto;
+.showline {
+  font-size: 12px;
   color: #fff;
+  margin-top: 0;
 }
 
-.showline {
-  font-size: 15px;
+.showDiv {
+  display: flex;
+  width: 48%;
+  justify-content: center;
+  align-items: center;
+  margin: 15px auto;
   color: #fff;
+  height: 25vh;
 }
 
 .showImg {
   width: 90%;
-  height: 10rem;
-  object-fit: cover;
-  object-position: center;
+  height: 100%;
+  position: relative;
+  top: 15px;
+  object-fit: contain;
+  object-position: top right;
 }
 
 .sbc {
-  width: 99vw;
+  width: 98vw;
+  margin: 0 auto;
+  margin-top: 5px;
   height: 4vh;
   background: #274d82;
   display: flex;
@@ -84,17 +95,121 @@
 .cover {
   width: 45%;
   margin: 0 auto;
+  border-radius: 4px;
   text-decoration: none;
+}
+
+.companyList {
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
   .cover {
-    width: 30%;
+    width: 90%;
+  }
+
+  .header {
+    height: 10vh;
+  }
+
+  .showline {
+    font-size: 15px;
+    color: #fff;
+    margin-top: 0;
+  }
+
+  .showcase {
+    height: 35%;
+    width: 98vw;
+    margin: 15px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .showDiv {
+    display: block;
+    width: 48%;
+    margin: 0 auto;
+    color: #fff;
+    height: 55vh;
+  }
+
+  .icons {
+    width: 10%;
+    font-size: 24px;
+  }
+
+  .year {
+    font-size: 24px;
+  }
+
+  .heading {
+    font-size: 26px;
+    font-weight: 700;
+  }
+
+  .sbc {
+    height: 7vh;
+    width: 98vw;
+  }
+
+  .sbc p {
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .allCompanies {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+  }
+
+  .showImg {
+    width: 40vw;
+    height: 50vh;
+    object-fit: cover;
+  }
+
+  .companyList {
+    display: flex;
+    width: 100%;
+    height: 80%;
+    flex-wrap: wrap;
+  }
+
+  .inactive {
+    width: 45%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    border-radius: 3px;
+    padding-left: 10px;
+    height: 4vh;
+    background: #274d82;
+    opacity: 0.7;
+  }
+
+  .active {
+    color: aquamarine;
+    width: 45%;
+    margin: 0 auto;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    border-radius: 3px;
+    padding-left: 10px;
+    height: 4vh;
+    background: rgb(37, 47, 50);
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .cover {
-    width: 18%;
+  .allCompanies {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+    grid-template-rows: auto;
   }
 }
